--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,17 @@ code {
 	margin: auto;
   width: 50%;
 }
+
+.footer {
+  margin: auto;
+  width: 100%;
+  height: 2em;
+  background-color: #343a40;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #cccccc;
+  text-align: center;
+
+}
