--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,3 @@
-* {
-  /*border: none;*/
-}
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,7 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #ffffff;
+  background-color: #aaaaaa;
 }
 
 code {
@@ -26,6 +22,21 @@ code {
 .focus {
 	margin: auto;
   width: 50%;
+  background-color: #ffffff;
+  padding: 1em;
+  text-align: left;
+  
+}
+
+.outerfocus {
+  margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 100%;
+  background-color: #eeeeee;
+  padding: 1em;
+  line-height: 1em;
+  text-align: center;
 }
 
 .footer {
@@ -39,5 +50,4 @@ code {
   right: 0;
   color: #cccccc;
   text-align: center;
-
 }
